# panopticon-tui

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: cd.yml  release.yml  rust.yml
src/: app.rs  fetcher.rs  main.rs  mod.rs  ui.rs
src/akka/: client.rs  model.rs
src/akka_actor_tree/: client.rs  model.rs
src/akka_cluster/: client.rs  mod.rs  model.rs
src/jmx/: client.rs  model.rs
src/jmx_client/: client.rs  model.rs
src/ui/: app.rs  fetcher.rs  formatter.rs  mod.rs  model.rs  ui.rs
src/utils/: tree.rs
src/widgets/: tree.rs
src/zio/: dump_parser.rs  mod.rs  model.rs  tests.rs  zmx.rs  zmx_client.rs
src/zookeeper/: mod.rs  model.rs  zookeeper_client.rs
