[package]
name = "panopticon-tui"
version = "0.1.0"
authors = ["jczuchnowski <jakub.czuchnowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.13"
tui = { version = "0.7", default-features = false, features = ['crossterm'] }
failure = "0.1"

bytes = "0.4"
redis-protocol = "1.0.0"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3"
jmx = "0.2.0"
reqwest = { version = "0.10.4", features = ["default-tls", "json"] }
serde = "1.0.106"
serde_json = "1.0.53"
