[package]
name = "panopticon-tui"
version = "0.2.1"
authors = ["jczuchnowski <jakub.czuchnowski@gmail.com>", "vpavkin <vpavkin@gmail.com>"]
license = "GPL-3.0"
description = "Terminal UI diagnostic tool for Scala apps"
readme = "README.md"
homepage = "https://github.com/ScalaConsultants/panopticon-tui/"
repository = "https://github.com/ScalaConsultants/panopticon-tui/"
keywords = ["scala", "metrics", "monitoring"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
crossterm = "0.18"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
failure = "0.1"
bytes = "1.0"
redis-protocol = "1.0.0"
futures = "0.3.15"
tokio = { version = "1.5", features = ["full"] }
structopt = "0.3"
jmx = "0.2.1"
reqwest = { version = "0.11", features = ["default-tls", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.53"
chrono = "0.4.11"
humantime = "2.0.0"
